Started on items and now it console logs items under the player

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <body>
 
     <div id="gamefield">
-        <div id="background"></div>
-        <div id="items"></div>
+        <div id="background">
+
+        </div>
+        <div id="items">
+            
+        </div>
         <div id="characters">
             <div id="player"></div>
         </div>
