Made items pickable and with sounds and keyboard press

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 
         </div>
         <div id="items">
-            
+
         </div>
         <div id="characters">
             <div id="player"></div>
         </div>
     </div>
+
+    <audio id="sound_coins" src="simple-assets/sounds/coins.mp3"></audio>
 
     <script src="controller.js"></script>
 </body>
